updated project url

--- a/src/NPNelson.ASPNetMiddleware/NPNelson.ASPNetMiddleware.csproj
+++ b/src/NPNelson.ASPNetMiddleware/NPNelson.ASPNetMiddleware.csproj
@@ -6,6 +6,8 @@
     <Description>Includes middleware that:
 1) Requires https unless running on localhost
 2) Requires authentication unless running on localhost</Description>
+    <Version>1.0.01</Version>
+    <PackageProjectUrl>https://github.com/npnelson/ASPNetMiddleware</PackageProjectUrl>
   </PropertyGroup>
 
   <ItemGroup>
