fixed namespace on requireauthentication

--- a/src/NPNelson.ASPNetMiddleware/NPNelson.ASPNetMiddleware.csproj
+++ b/src/NPNelson.ASPNetMiddleware/NPNelson.ASPNetMiddleware.csproj
@@ -5,8 +5,9 @@
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
     <Description>Includes middleware that:
 1) Requires https unless running on localhost
-2) Requires authentication unless running on localhost</Description>
-    <Version>1.0.2</Version>
+2) Requires authentication unless running on localhost
+3) Requires authentication regardless of localhost</Description>
+    <Version>1.0.3</Version>
     <PackageProjectUrl>https://github.com/npnelson/ASPNetMiddleware</PackageProjectUrl>
   </PropertyGroup>
 
