--- a/src/NPNelson.ASPNetMiddleware/NPNelson.ASPNetMiddleware.csproj
+++ b/src/NPNelson.ASPNetMiddleware/NPNelson.ASPNetMiddleware.csproj
@@ -7,11 +7,12 @@
 1) Requires https unless running on localhost
 2) Requires authentication unless running on localhost
 3) Requires authentication regardless of localhost</Description>
-    <Version>1.0.4</Version>
+    <Version>1.0.6</Version>
     <PackageProjectUrl>https://github.com/npnelson/ASPNetMiddleware</PackageProjectUrl>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Hosting.Abstractions" Version="1.1.1" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="1.1.1" />
   </ItemGroup>
 
