--- a/src/NPNelson.ASPNetMiddleware/NPNelson.ASPNetMiddleware.csproj
+++ b/src/NPNelson.ASPNetMiddleware/NPNelson.ASPNetMiddleware.csproj
@@ -1,19 +1,19 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp1.1</TargetFramework>
+    <TargetFramework>netstandard20</TargetFramework>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
     <Description>Includes middleware that:
 1) Requires https unless running on localhost
 2) Requires authentication unless running on localhost
 3) Requires authentication regardless of localhost</Description>
-    <Version>1.0.8</Version>
+    <Version>1.0.9-rc1</Version>
     <PackageProjectUrl>https://github.com/npnelson/ASPNetMiddleware</PackageProjectUrl>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Hosting.Abstractions" Version="1.1.2" />
-    <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="1.1.2" />
+    <PackageReference Include="Microsoft.AspNetCore.Hosting.Abstractions" Version="2.0.0-preview2-final" />
+    <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.0.0-preview2-final" />
   </ItemGroup>
 
 </Project>
